updating sass file

--- a/src/main.scss
+++ b/src/main.scss
@@ -6,23 +6,23 @@
 }
 
 @import '../src/component/button/Button';
-@import '../src/component/cart-dropdown/Cart-dropdown.scss';
-@import '../src/component/cart-icon/Cart-icon.scss';
-@import '../src/component/cart-item/cart-item.scss';
-@import '../src/component/category-preview/category-preview.scss';
-@import '../src/component/checkout-item/checkout-item.scss';
-@import '../src/component/directory-item/directory-item.scss';
-@import '../src/component/directory/directory.scss';
-@import '../src/component/form-input/Form-input.scss';
-@import '../src/component/products-card/product-card.scss';
-@import '../src/component/SignIn-Form/signin-form.scss';
-@import '../src/component/signup-form/signup-form.scss';
-@import '../src/routes/authentication/auth.scss';
-@import '../src/routes/category/category.scss';
-@import '../src/routes/checkout/checkout.scss';
-@import '../src/routes/home/Home.scss';
-@import '../src/routes/navigation/Navigation.scss';
-@import '../src/routes/shop/Shop.scss';
+@import '../src/component/cart-dropdown/Cart-dropdown';
+@import '../src/component/cart-icon/Cart-icon';
+@import '../src/component/cart-item/cart-item';
+@import '../src/component/category-preview/category-preview';
+@import '../src/component/checkout-item/checkout-item';
+@import '../src/component/directory-item/directory-item';
+@import '../src/component/directory/directory';
+@import '../src/component/form-input/Form-input';
+@import '../src/component/products-card/product-card';
+@import '../src/component/SignIn-Form/signin-form';
+@import '../src/component/signup-form/signup-form';
+@import '../src/routes/authentication/auth';
+@import '../src/routes/category/category';
+@import '../src/routes/checkout/checkout';
+@import '../src/routes/home/Home';
+@import '../src/routes/navigation/Navigation';
+@import '../src/routes/shop/Shop';
 
 
 
